[package]
name = "snmp"
version = "0.1.0"
authors = ["Anton Kondrachkov"]

[features]
with-serde = ["serde", "serde_derive", "asn1-exp/with-serde"]
default = ["with-serde"]

[dependencies]
asn1-exp = { version = "*", path = "../asn1-exp" }
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }

[dev-dependencies]
quickcheck = "0.4"
quickcheck_macros = "0.4"
